@@ -1,3 +1,8 @@
+2004-05-05  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinFont.c (FindSubFontForChar): corrections to dkf patch
+	to handle subFontPtrPtr in EnumFontFamilies callback.
+
 2004-05-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* win/tkWinFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make sure
